<resources>
    <string name="app_name">OnField TBS</string>
    <!-- Title -->
    <string name="title">OnField TBS</string>
    <!-- Login -->
    <string name="login_title">INICIAR SESIÓN</string>
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">ENTRAR</string>
    <!-- Profile -->
    <string name="profile_onboarding">Incorporación:</string>
    <string name="profile_incidence_title">Mis Incidencias</string>
    <!-- Nav -->
    <string name="title_nav_incident">Incidencias</string>
    <string name="title_nav_map">Mapa</string>
    <string name="title_nav_profile">Mi Perfil</string>
    <!-- Incidence -->
    <string name="incidence_title">Mis Incidencias</string>
    <string name="incidence_all">Ver todas</string>
    <string name="incidence_number">Nº</string>
    <string name="incidence_state">Estado</string>
    <string name="incidence_priority">Prioridad</string>
    <string name="incidence_date">Fecha</string>
    <string name="incidence_search">Buscar</string>
    <!-- Incidence Detail -->
    <string name="detail_creation">Creación:</string>
    <string name="detail_closed">Cierre:</string>
    <string name="detail_assigned">Asignado a:</string>
    <!-- Employee Profile -->
<!--    <string name="profile_employee_call_to">Llamar a\ </string>-->
    <string name="profile_employee_extension">Extensión\ </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>